[tool.poetry]
name = "handshake-client"
version = "0.0.0" # using poetry-dynamic-versioning
description = "Handshake API client by Python"
authors = ["naoki-maeda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
python-bitcoinrpc = "^1.0"
python-socketio = {extras = ["client"], version = "^4.5.1"}
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
